<resources>
    <string name="app_name">Playformance</string>
    <string name="hello">Team application</string>
    <string name="welcomeText">Welcome to PLAYFORMANCE!</string>
    <string name="btn1">Go to next activity</string>
    <string name="newTeam">New Team</string>
    <string name="existTeam">Exist Team?</string>
    <string name="lastPerformance">Last Performance?</string>
    <string name="TeamSelection">Select a team</string>
    <string name="team">Team</string>
    <string name="inputPlNumber">Input Player Number</string>
    <string name="newPlayerr">New player</string>
    <string name="inputTeamName">Input Team Name</string>
    <string name="inputFnamePlayer">Input player (First name)</string>
    <string name="inputLnamePlayer">Input player (Last name)</string>
    <string name="inputgamenumber">Input Game Number</string>
    <string name="teamexisted">Team X</string>
    <string name="ClicktoconfirmGN">SAVE</string>
    <string name="ClicktoconfirmDate">OK</string>
    <string name="select_date">Select Date</string>
    <string name="SelectAPlayer">Please Select A Player</string>
    <string name="update">TEAM UPDATE</string>
    <string name="Player2">Player 2</string>
    <string name="Player3">Player 3</string>
    <string name="Player4">Player 4</string>
    <string name="Player5">Player 5</string>
    <string name="Player6">Player 6</string>
    <string name="EndGame">End of the game</string>
    <string name="ChooseOptions">Please select action for</string>
    <string name="ActionWins">WINS</string>
    <string name="ActionFault">FAULTS</string>
    <string name="F1">BAD BLOCK</string>
    <string name="F2">BAD POSITION</string>
    <string name="F3">BAD ATTACK</string>
    <string name="F4">MISS SERVE</string>
    <string name="F5">EXTRA TOUCH</string>
    <string name="F6">BAD RECEIVE</string>
    <string name="OPLAYER">OTHER PLAYER</string>
    <string name="WIPLAYERS">ACHIEVEMENTS</string>
    <string name="W1">GOOD SERVE: ACE</string>
    <string name="W2">SUCCESSFUL BLOCK</string>
    <string name="W3">DIAGONAL SPIKE</string>
    <string name="W4">FIRST TIME ATTACK</string>
    <string name="W5">SUCCESSFUL TIP</string>
    <string name="W6">SECOND TIME ATTACK</string>
    <string name="FAPLAYER">FAULTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_perfomance_players">PerfomancePlayers</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>