<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="btnActionWIN"
    tools:context=".notes.WinsScreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/bAce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D8C37"
        android:onClick="btnActionWIN"
        android:text="@string/W1"
        app:layout_constraintBottom_toTopOf="@+id/bBlock"
        app:layout_constraintEnd_toStartOf="@+id/bFTAttack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerWIN" />

    <Button
        android:id="@+id/bBlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D8C37"
        android:onClick="btnActionWIN"
        android:text="@string/W2"
        app:layout_constraintBottom_toTopOf="@+id/bSpike"
        app:layout_constraintEnd_toStartOf="@+id/bTip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bAce" />

    <Button
        android:id="@+id/bSpike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D8C37"
        android:onClick="btnActionWIN"
        android:text="@string/W3"
        app:layout_constraintBottom_toTopOf="@+id/bOtherPlayerWin"
        app:layout_constraintEnd_toStartOf="@+id/bSTAttack"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bBlock" />

    <Button
        android:id="@+id/bOtherPlayerWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0597D2"
        android:onClick="btnActionWIN"
        android:text="@string/OPLAYER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bToFaultsWin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSpike" />

    <Button
        android:id="@+id/bFTAttack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D8C37"
        android:onClick="btnActionWIN"
        android:text="@string/W4"
        app:layout_constraintBottom_toTopOf="@+id/bTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bAce"
        app:layout_constraintTop_toBottomOf="@+id/playerWIN" />

    <Button
        android:id="@+id/bTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2D8C37"
        android:onClick="btnActionWIN"
        android:text="@string/W5"
        app:layout_constraintBottom_toTopOf="@+id/bSTAttack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bBlock"
        app:layout_constraintTop_toBottomOf="@+id/bFTAttack" />

    <Button
        android:id="@+id/bSTAttack"
        android:layout_width="174dp"
        android:layout_height="53dp"
        android:backgroundTint="#2D8C37"
        android:onClick="btnActionWIN"
        android:text="@string/W6"
        app:layout_constraintBottom_toTopOf="@+id/bToFaultsWin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bSpike"
        app:layout_constraintTop_toBottomOf="@+id/bTip" />

    <Button
        android:id="@+id/bToFaultsWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D20505"
        android:onClick="btnActionWIN"
        android:text="@string/FAPLAYER"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bOtherPlayerWin"
        app:layout_constraintTop_toBottomOf="@+id/bSTAttack" />

    <TextView
        android:id="@+id/playerWIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>